[package]
name = "npm-login-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"]}
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
openssl-sys = ["dep:openssl"]

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true